--- a/Урок 2. Инструменты сборки/homeWork/package.json
+++ b/Урок 2. Инструменты сборки/homeWork/package.json
@@ -4,8 +4,7 @@
   "description": "",
   "main": "webpack.config.js",
   "dependencies": {
-    "howler": "^2.2.1",
-    "luxon": "^1.27.0"
+    "howler": "^2.2.1"
   },
   "devDependencies": {
     "@babel/core": "^7.14.6",
@@ -16,7 +15,6 @@
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.3.2",
     "mini-css-extract-plugin": "^1.6.1",
-    "modclean": "^3.0.0-beta.1",
     "sass": "^1.35.1",
     "sass-loader": "^12.1.0",
     "style-loader": "^3.0.0",
